--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cbhami</h1>
-    <a href="/contact.html"></a>
+    <a href="/contact.html">contact</a>
     <p>Hello</p>
     <p>Hello</p>
     <p>Hello</p>
