--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <p>Hello</p>
     <p>Hello</p>
     <p>Hello</p>
+    <ol>
     <li>Dashboard</li>
+    <li>Profile</li>
+    <li>Settings</li>
+    <li>Logout</li>
+    </ol>
 </body>
 </html>
