--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Hello</p>
     <p>Hello</p>
 </ul>
-    <ol>
+    <ol style="list-style-type: square">
     <li>Dashboard</li>
     <li>Profile</li>
     <li>Settings</li>
