--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <h1>Cbhami Data Analytics Portfolio</h1>
 </head>
+
+
 <body>
     <h1>Cbhami</h1>
     <a href="/contact.html">Contact Page</a>
     <ul>
-    <p>Hello</p>
-    <p>Hello</p>
-    <p>Hello</p>
-</ul>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+    </ul>
     <ol style="list-style-type: square">
-    <li>Dashboard</li>
-    <li>Profile</li>
-    <li>Settings</li>
-    <li>Logout</li>
+        <li>Dashboard</li>
+        <li>Profile</li>
+        <li>Settings</li>
+        <li>Logout</li>
     </ol>
 </body>
+
+
+
 </html>
