--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <h4> Heading Four</h4>
     <h5> Heading Five</h5>
     <h6> Heading Six</h6>
+
+
+    <p>This is a paragraph.</p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. In provident molestiae modi eum dicta, distinctio saepe quidem est nemo, delectus, praesentium quibusdam ullam facere sapiente rerum sint reiciendis quis tenetur!
+    <p>This is a paragraph.</p>
 </body>
 
 
