--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cbhami Github Pages</title>
     <link rel="stylesheet" href="styles.css">
     <h1>Cbhami Data Analytics Portfolio</h1>
 </head>
