--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <p>This is a paragraph.</p>
-    Lorem ipsum dolor sit, amet <b>hello </b>consectetur adipisicing elit. In provident molestiae modi eum dicta, distinctio saepe quidem est nemo, delectus, praesentium quibusdam ullam facere sapiente rerum sint reiciendis quis tenetur!
+    Lorem <big> today </big>ipsum dolor sit, amet <b>hello </b>consectetur adipisicing elit. In provident molestiae modi eum dicta, distinctio saepe quidem est nemo, delectus, praesentium quibusdam ullam facere sapiente rerum sint reiciendis quis tenetur!
     <p>This is a <i> small </i>paragraph.</p>
 </body>
 
