--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
     <p>This is a paragraph.</p>
     Lorem <big> today </big>ipsum dolor sit, amet <b>hello </b>consectetur adipisicing elit. In provident molestiae modi eum dicta, distinctio saepe quidem est nemo, delectus, praesentium quibusdam ullam facere sapiente rerum sint reiciendis quis tenetur!
-    <p>This is a <i> small </i>paragraph.</p>
+    <p>This <small> might be </small> a <i> small </i>paragraph.</p>
+
+    <p>I like to drink H<sub>2</sub>O</p>
 </body>
 
 
