--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <p>This <small> might be </small> a <i> small </i>paragraph.</p>
 
     <p>I like to drink H<sub>2</sub>O</p>
+    <p>If I multiply 10<sup>10</sup> I will find the <i>answer</i></p>
 </body>
 
 
