--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
     <p>I like to drink H<sub>2</sub>O</p>
     <p>If I multiply 10<sup>10</sup> I will find the <i>answer</i></p>
+
+    <p style="color:aqua"> I can style this blue if I want</p>
+
 </body>
 
 
