--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
 <hr/><hr/>
 
 <body>
+    <header>    </header>
+    <main>
+
+    </main>
+
+    <footer>
+        <p>&copy; Cbhami</p>
+    </footer>
+    
     <h1>Cbhami</h1>
     <a href="/contact.html">Contact Page</a>
 
-    
+
     <ul>
         <p>Hello</p>
         <p>Hello</p>
