--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
 <article>
     <section>
         <h1>Contact</h1>
+        <h2>Contact Me</h2>
+
     </section>
+
+    <aside>
+
+
+        
+    </aside>
 
     <section>
 
     </section>
-    
+
     <h2>Contact</h2>
     <p>
         <form action="contact.php" method="post">
