--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
 </head>
 
 <h3> Cole B Hamilton 
-    <h3/>
-
 </h3>
-<h3 style="color:rgb(58, 46, 31)"> Data Analytics cbhami02@louisville.edu </h3>
+<h3> Data Analytics cbhami02@louisville.edu </h3>
 
 
 
@@ -44,6 +42,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
+        <li><a href="Contact.html">Contact</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
@@ -51,6 +50,8 @@
 </nav>
 
     </header>
+
+
     <main>
 
 
