--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h3> Cole B Hamilton 
 </h3>
-<h3> Data Analytics cbhami02@louisville.edu </h3>
+<h3> Data Analytics <a1 style="font-family:'Courier New'" position: absolute > cbhami02@louisville.edu</a1> </h3>
 
 
 
