--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 								<li class="wow animated zoomIn"><a href="https://www.linkedin.com/in/hamiltoncole/"><i class="fa fa-thumbs-up fa-2x"></i></a></li>
 								<li class="wow animated zoomIn" data-wow-delay="0.3s"><a href="https://twitter.com/Cbhami02"><i class="fa fa-twitter fa-2x"></i></a></li>
 								
-								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="Cbhami.github.io/img/Cole Hamilton Resume JAN 23 v2.pub.pdf"><i class="fa fa-file fa-2x"></i></a></li>							
+								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="img/Cole Hamilton Resume JAN 23 v2.pub.pdf"><i class="fa fa-file fa-2x"></i></a></li>							
 							</ul>
 							
 						</div>
