--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li><a href="#body">Home</a></li>
                         <li><a href="#Skills">Skills</a></li>
                         <li><a href="#portfolio">portfolio</a></li>
-                        <li><a href="#price">Jupyter Notebooks</a></li>
+                        <li><a href="#price">Notebooks</a></li>
                         <li><a href="#social">Resume & Social</a></li>
                     </ul>
                 </nav>
