--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>cbhami Data Portfolio</title>		
 		<!-- Meta Description -->
-        <meta name="description" content="cbhami Data Analytics Portfolio">
+        <meta name="description" content="cbhami Data Portfolio">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
         <meta name="author" content="Cole Hamilton">
 		
