--- a/index.html
+++ b/index.html
@@ -69,10 +69,38 @@
                     <h2>Resume and Certifications</h2>
                 </div>
                 <div class="row">
-                    <!-- Embed Certification Dashboard using Power BI link -->
-                    <div style="position:relative; overflow:hidden; padding-top:56.25%;">
-                        <iframe title="Certification Dashboard" width="100%" height="100%" src="https://app.powerbi.com/links/CJiKDp137Z?ctid=dd246e4a-5434-4e15-8ae3-91ad9797b209&pbi_source=linkShare" frameborder="0" allowFullScreen="true" style="position:absolute; top:0; left:0; width:100%; height:100%;"></iframe>
+                    <!-- Embed Certification Dashboard -->
+                    <div class='tableauPlaceholder' id='certificationDashboard' style='width: 100%; height: 800px;'>
+                        <noscript>
+                            <a href='#'>
+                                <img alt='Certification Dashboard' src='https://public.tableau.com/static/images/My/MyCertificationTracker/Dashboard1/1.png' style='border: none'/>
+                            </a>
+                        </noscript>
+                        <object class='tableauViz' style='display:none;'>
+                            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+                            <param name='embed_code_version' value='3'/>
+                            <param name='site_root' value=''/>
+                            <param name='name' value='MyCertificationTracker&#47;Dashboard1'/>
+                            <param name='tabs' value='no'/>
+                            <param name='toolbar' value='yes'/>
+                            <param name='static_image' value='https://public.tableau.com/static/images/My/MyCertificationTracker/Dashboard1/1.png'/>
+                            <param name='animate_transition' value='yes'/>
+                            <param name='display_static_image' value='yes'/>
+                            <param name='display_spinner' value='yes'/>
+                            <param name='display_overlay' value='yes'/>
+                            <param name='display_count' value='yes'/>
+                            <param name='language' value='en-US'/>
+                        </object>
                     </div>
+                    <script type='text/javascript'>
+                        var divElement = document.getElementById('certificationDashboard');
+                        var vizElement = divElement.getElementsByTagName('object')[0];
+                        vizElement.style.width = '100%';
+                        vizElement.style.height = divElement.offsetWidth * 0.75 + 'px';
+                        var scriptElement = document.createElement('script');
+                        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                    </script>
                 </div>
             </div>
         </section>
@@ -83,7 +111,7 @@
 
     <footer id="footer">
         <div class="container text-center">
-            <p>Updated 27 October, 2024</p>
+            <p>Updated 5 January, 2023</p>
         </div>
     </footer>
 
