--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 								<li class="wow animated zoomIn"><a href="https://www.linkedin.com/in/hamiltoncole/"><i class="fa fa-thumbs-up fa-2x"></i></a></li>
 								<li class="wow animated zoomIn" data-wow-delay="0.3s"><a href="https://twitter.com/Cbhami02"><i class="fa fa-twitter fa-2x"></i></a></li>
 								
-								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="https://github.com/Cbhami/Cbhami.github.io/blob/main/img/Cole%20Hamilton%20Resume%20JAN%2023%20v2.pub.pdf"><i class="fa fa-file fa-2x"></i></a></li>							
+								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="https://github.com/Cbhami/Coraline/blob/main/Resume%20Resources/Cole%20Hamilton%20Resume%20OCT%2024%20vO.pub.docx"><i class="fa fa-file fa-2x"></i></a></li>							
 							</ul>
 							
 						</div>
